--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,13 @@
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="menustyle.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 
@@ -22,7 +29,7 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="navbar-item">
-            <a class="nav-link" href="home.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="navbar-item">
             <a class="nav-link" href="menu.html">Menu</a>
@@ -122,7 +129,7 @@
           Meatball
         </div>
       </div>
-      <div class="combos">
+      <div class="combo1">
         <div class="beef">Popular beef combinations</div>
         1. <b>Pho chín gau</b> - Pho with shank and brisket<br>
         2. <b>Pho tái chin bò viên</b> - Pho with eyeround, shank, and meatball<br>
@@ -131,17 +138,20 @@
         5. <b>Pho tái gaân sách</b> - Pho with eyeround, tendon, and Tripe<br>
         6. <b>Pho tái chín gau</b> - Pho with eyeround, shank, and brisket<br>
         7. <b>Pho dac biet</b> - Grand Combo Pho (all 6 meats)
-
+      </div>
+      <div class="combo2">
         <div class="chicken">Chicken broth</div>
         8. <b>Pho gà</b> - Pho with chicken (white or dark meat)<br>
         9. <b>Pho hai san</b> - Pho with seafood (shrimp, fish balls, scallops, and crab meat)
-
+      </div>
+      <div class="combo3">
         <div class="veg">Vegetarian broth</div>
         10. <b>Pho dau hu</b> - Pho with tofu<br>
         11. <b>Pho rau</b> - Pho with mixed vegetables<br>
         12. <b>Pho gà chay</b> - Pho with soy chicken<br>
         13. <b>Pho bò chay</b> - Pho with soy beef<br>
-
+      </div>
+      <div class="combo4">
         <div class="banh">
           <div class="banh-title">
             <h2>BÁNH MÌ</h2>
@@ -154,141 +164,141 @@
           3. <b>Bánh mì gà</b> - Lemongrass chicken and sautéed onions<br>
           4. <b>Bánh mì dau hu</b> - Seasoned tofu fried and then sautéed<br>
           5. <b>Bánh mì bò chay</b> - Stir-fried soy beef and sautéed onions<br>
-
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="entree-items grid-container">
-      <div class="entrees">
-        <h2>GRILLED ENTREES<br></h2>
+  <div class="entree-items grid-container">
+    <div class="entrees">
+      <h2>GRILLED ENTREES<br></h2>
+    </div>
+    <p class="ent-desc">Marinated in our special sauce and cooked on an open flame broiler. All grilled
+      entrees
+      come with a choice of steamed rice (com) or vermicelli (bún)</p>
+    <div class="grill1">Grilled lemongrass pork
+      <p class="description">
+        Topped with crushed peanuts <b>9.5</b></p>
+    </div>
+    <div class="grill2">Grilled lemongrass chicken
+      <p class="description">
+        Marinated chicken <b>9.5</b></p>
+    </div>
+    <div class="grill3">Grilled barbecue pork chop
+      <p class="description">
+        Marinated pork chop <b>10.5</b></p>
+    </div>
+    <div class="grill4">Grilled tofu
+      <p class="description">
+        Marinated tofu <b>9</b>
+      </p>
+    </div>
+    <div class="entree2">
+      <h2>STIR FRIED ENTREES
+        <h2>
+    </div>
+    <div class="ent-desc2">Classic lemongrass stir-fry - Sautéed carrots, onions, and beansprouts with
+      lemongrass
+      and
+      chili in a garlic stir-fry sauce. Comes with a choice of rice (com) or vermicelli (bún)</div>
+    <div class="stir-options">
+      <div class="meat3">Beef <b>9</b><br>
+        Chicken <b>9</b><br>
+        Shrimp <b>11</b>
       </div>
-      <p class="ent-desc">Marinated in our special sauce and cooked on an open flame broiler. All grilled
-        entrees
-        come with a choice of steamed rice (com) or vermicelli (bún)</p>
-      <div class="grill1">Grilled lemongrass pork
-        <p class="description">
-          Topped with crushed peanuts <b>9.5</b></p>
-      </div>
-      <div class="grill2">Grilled lemongrass chicken
-        <p class="description">
-          Marinated chicken <b>9.5</b></p>
-      </div>
-      <div class="grill3">Grilled barbecue pork chop
-        <p class="description">
-          Marinated pork chop <b>10.5</b></p>
-      </div>
-      <div class="grill4">Grilled tofu
-        <p class="description">
-          Marinated tofu <b>9</b>
-        </p>
-      </div>
-      <div class="entree2">
-        <h2>STIR FRIED ENTREES
-          <h2>
-      </div>
-      <div class="ent-desc2">Classic lemongrass stir-fry - Sautéed carrots, onions, and beansprouts with
-        lemongrass
-        and
-        chili in a garlic stir-fry sauce. Comes with a choice of rice (com) or vermicelli (bún)</div>
-      <div class="stir-options">
-        <div class="meat3">Beef <b>9</b><br>
-          Chicken <b>9</b><br>
-          Shrimp <b>11</b>
-        </div>
-        <div class="meat4">Tofu <b>9</b><br>
-          Soy chicken <b>9.5</b><br>
-          Soy beef <b>9.5</b>
-        </div>
-      </div>
-
-      <div class="stir1">Rau xào chay - Vegetarian Delight<div class="description">
-          Mixed vegetables stir-fried in a light ginger soy. Served with steamed rice <b>9.5</b></div>
-      </div>
-      <div class="stir2">Mì xào chay - Vegetarian stir-fried egg noodles
-        <div class="description">
-          Broccoli, shitake mushrooms, carrots, onions, tofu, and bean sprouts stir-fried with wonton
-          noodles
-          in a
-          garlic soy sauce <b>10</b></div>
-      </div>
-      <div class="stir3">Mì tôm xào toi - Garlic noodles with prawns
-        <div class="description">
-          Rich and buttery noodles cooked with prawns in a spicy garlic
-          sauce <b>12</b>
-        </div>
-      </div>
-      <div class="stir4">Khoai tây xào thit bò - Hanoi fries and beef
-        <div class="description">
-          Hand cut potato fries stir-fried with beef and gravy. Served with your choice of rice or
-          vermicelli
-          (Vegetatian option available substituting soy
-          beef) <b>10</b></div>
+      <div class="meat4">Tofu <b>9</b><br>
+        Soy chicken <b>9.5</b><br>
+        Soy beef <b>9.5</b>
       </div>
     </div>
-    <div class="spec-items grid-container">
-      <div class="specialty">
-        <h2>SPECIALTY<h2>
-      </div>
-      <div class="spec1">Hu tieu/Mì dac biet - House special rice/egg noodle soup<div class="description">
-          Pork and seafood broth soup with your choice of rice or egg
-          noodles <b>9</b></div>
-      </div>
-      <div class="spec2">Com dac biet (Bì suòn cha trúng) - House special combo
-        <div class="description">
-          A combination plate with a barbecue pork chop, julienne pork skin, egg loaf, and a fried egg.
-          Served
-          with
-          steamed rice, vermicelli may be substituted <b>10.5</b></div>
-      </div>
-      <div class="spec3">Com chiên - Lime and Basil's fried rice
-        <div class="description">
-          A delightful blend of chicken, roast pork, Chinese sausage, shrimp, peas, carrots, onions, and
-          eggs
-          tossed with rice (Vegetarian option available substituting tofu and
-          broccoli) <b>10</b>
-        </div>
-      </div>
-      <div class="spec4">Cà ri chay - Vegetarian curry
-        <div class="description">
-          Golden potatoes, carrots, broccoli, onions, and tofu simmered in a medium spicy yellow curry
-          sauce
-          with
-          coconut milk. Served with steamed
-          rice <b>10.5</b></div>
-      </div>
-      <div class="spec5">Cà ri gà - Chicken curry
-        <div class="description">
-          Chicken, golden potatoes, carrots, broccoli, onions, and tofu simmered in a medium spicy yellow
-          curry
-          sauce with coconut milk. Served with steamed
-          rice <b>10.5</b></div>
-      </div>
-      <div class="spec6">Bún tôm thit nuóng cha giò - Saigon street noodles
-        <div class="description">
-          Lemongrass grilled pork with shrimp and a spring roll served over a bed of vermicelli noodles.
-          Topped
-          with peanuts and fried shallots with fish sauce on the side. No
-          substitutions <b>12</b></div>
-      </div>
-      <div class="ala">
-        <h2>A LA CARTE<h2>
-      </div>
-      <div class="carte">Side of
-        rice - <b>1.5</b><br>Side
-        of
-        noodles - <b>1.5</b><br>Crispy
-        spring roll - <b>1.75</b><br>Fresh
-        summer
-        roll - <b>2.5</b><br>Fresh summer
-        roll - <b>2.75</b><br>Special
-        summer roll - <b>2.75</b><br>Side
-        of broth - <b>3</b><br>Fried
-        egg - <b>1</b><br>Extra
-        protein - <b>2</b><br>Side of grilled
-        meat - <b>4.5</b><br>Extra
-        sauce - <b>0.5</b></div>
+
+    <div class="stir1">Rau xào chay - Vegetarian Delight<div class="description">
+        Mixed vegetables stir-fried in a light ginger soy. Served with steamed rice <b>9.5</b></div>
     </div>
+    <div class="stir2">Mì xào chay - Vegetarian stir-fried egg noodles
+      <div class="description">
+        Broccoli, shitake mushrooms, carrots, onions, tofu, and bean sprouts stir-fried with wonton
+        noodles
+        in a
+        garlic soy sauce <b>10</b></div>
+    </div>
+    <div class="stir3">Mì tôm xào toi - Garlic noodles with prawns
+      <div class="description">
+        Rich and buttery noodles cooked with prawns in a spicy garlic
+        sauce <b>12</b>
+      </div>
+    </div>
+    <div class="stir4">Khoai tây xào thit bò - Hanoi fries and beef
+      <div class="description">
+        Hand cut potato fries stir-fried with beef and gravy. Served with your choice of rice or
+        vermicelli
+        (Vegetatian option available substituting soy
+        beef) <b>10</b></div>
+    </div>
+  </div>
+  <div class="spec-items grid-container">
+    <div class="specialty">
+      <h2>SPECIALTY<h2>
+    </div>
+    <div class="spec1">Hu tieu/Mì dac biet - House special rice/egg noodle soup<div class="description">
+        Pork and seafood broth soup with your choice of rice or egg
+        noodles <b>9</b></div>
+    </div>
+    <div class="spec2">Com dac biet (Bì suòn cha trúng) - House special combo
+      <div class="description">
+        A combination plate with a barbecue pork chop, julienne pork skin, egg loaf, and a fried egg.
+        Served
+        with
+        steamed rice, vermicelli may be substituted <b>10.5</b></div>
+    </div>
+    <div class="spec3">Com chiên - Lime and Basil's fried rice
+      <div class="description">
+        A delightful blend of chicken, roast pork, Chinese sausage, shrimp, peas, carrots, onions, and
+        eggs
+        tossed with rice (Vegetarian option available substituting tofu and
+        broccoli) <b>10</b>
+      </div>
+    </div>
+    <div class="spec4">Cà ri chay - Vegetarian curry
+      <div class="description">
+        Golden potatoes, carrots, broccoli, onions, and tofu simmered in a medium spicy yellow curry
+        sauce
+        with
+        coconut milk. Served with steamed
+        rice <b>10.5</b></div>
+    </div>
+    <div class="spec5">Cà ri gà - Chicken curry
+      <div class="description">
+        Chicken, golden potatoes, carrots, broccoli, onions, and tofu simmered in a medium spicy yellow
+        curry
+        sauce with coconut milk. Served with steamed
+        rice <b>10.5</b></div>
+    </div>
+    <div class="spec6">Bún tôm thit nuóng cha giò - Saigon street noodles
+      <div class="description">
+        Lemongrass grilled pork with shrimp and a spring roll served over a bed of vermicelli noodles.
+        Topped
+        with peanuts and fried shallots with fish sauce on the side. No
+        substitutions <b>12</b></div>
+    </div>
+    <div class="ala">
+      <h2>A LA CARTE<h2>
+    </div>
+    <div class="carte">Side of
+      rice - <b>1.5</b><br>Side
+      of
+      noodles - <b>1.5</b><br>Crispy
+      spring roll - <b>1.75</b><br>Fresh
+      summer
+      roll - <b>2.5</b><br>Fresh summer
+      roll - <b>2.75</b><br>Special
+      summer roll - <b>2.75</b><br>Side
+      of broth - <b>3</b><br>Fried
+      egg - <b>1</b><br>Extra
+      protein - <b>2</b><br>Side of grilled
+      meat - <b>4.5</b><br>Extra
+      sauce - <b>0.5</b></div>
+  </div>
   </div>
 
 
