--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
     <header>
       <h1>Menu</h1>
     </header>
-    <div class="items grid-container">
+    <div class="items-app grid-container">
       <div class="app">
         <h2>APPETIZERS</h2>
       </div>
@@ -110,7 +110,8 @@
           jerky <b>8.5</b>
         </div>
       </div>
-
+    </div>
+    <div class="items-pho grid-container">
       <div class="pho">
         <h2>PHO</h2>
       </div>
@@ -152,10 +153,10 @@
         13. <b>Pho bò chay</b> - Pho with soy beef<br>
       </div>
       <div class="combo4">
+        <div class="banh-title">
+          <h2>BÁNH MÌ</h2>
+        </div>
         <div class="banh">
-          <div class="banh-title">
-            <h2>BÁNH MÌ</h2>
-          </div>
           1. <b>Bánh mì dac diet (thiet nguoi)</b> - Roasted pork, Vietnamese
           pork,
           ham, and
